# cartoon-runpod

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_GUIDELINES.md  DISK_SPACE_SOLUTIONS.md  DOCKER_FIXES.md  DOCKER_README.md  Dockerfile  HIGH_QUALITY_GUIDE.md  INPUT_OUTPUT_GUIDE.md  INTERFACE_README.md  README.md  RUNPOD_DEPLOYMENT.md  STARTUP_MODES.md  TESTING_README.md  api_server.py  build-docker-simple.ps1  build-docker.ps1  build-docker.sh  demo_gui.py  docker-bake.hcl  download_models.py  handler.py  launch.py  my_prompt.json  pyproject.toml  release_notes.md  requirements.txt  run_tests.py  runpod_animdiff.py  simple_gui.py  start_standalone.py  test_docker.py  test_input.json  test_production.py  web_interface.py
.github/workflows/: test-and-release.yml
.runpod/: config.yaml  hub.json  tests.json
lora_models/felfel_lora/: training_info.json
lora_models/temo_lora/: training_info.json
scripts/: create_release.py
src/: __init__.py  handler.py  models.py  test_worker.py
tests/: __init__.py  test_handler.py  test_handler_integration.py
